--- a/android/.project
+++ b/android/.project
@@ -11,7 +11,7 @@
 			<arguments>
 				<dictionary>
 					<key>LaunchConfigHandle</key>
-					<value>&lt;project&gt;/.externalToolBuilders/NDK builder Mupdf.launch</value>
+					<value>&lt;project&gt;/.externalToolBuilders/NDK Builder.launch</value>
 				</dictionary>
 			</arguments>
 		</buildCommand>
