--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -8,6 +8,9 @@
                       android:largeScreens="true"
                       android:anyDensity="true" />
     <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="11"/>
+    
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    
     <application android:label="@string/app_name"
                  android:icon="@drawable/icon"
                  android:debuggable="true"
