--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -13,7 +13,8 @@
     
     <application android:label="@string/app_name"
                  android:icon="@drawable/icon"
-                 android:debuggable="true">
+                 android:debuggable="true"
+                 android:hardwareAccelerated="true">
         <activity android:name="com.artifex.mupdf.ChoosePDFActivity"
                   android:label="@string/picker_title">
             <intent-filter>
